--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
   <title>TravelNiche</title>
 </head>
 <body>
+  <!--Do you guys know of a shortcut to list all countries rather
+  than typing them individually?-->
+  <h3> 
+    <label for="Destination">Destination</label>
+        <select name="Destination" id="choose country">
+  <option value="Choose">choose an option</option>
+      <option value="United States"> United States Of America</option>
+  <option value="England">United Kingdom</option>
+      <option value="México">México</option>
+  <option value="Italy">Italy</option>
+      <option value="France">France</option>
+  <option value="Guatemala">Guatemala</option>
+      <option value="Egypt">Egypt</option>
+  <option value="Germany"> Germany</option>
+
+</select>
+
+
+<!--Not sure how to incorporate date ranges and number of guests. 
+  Should we make these two different elements rather than 1?-->
+  </h3>
+  
+      <h3> Date Range
+  <input type="datetime-local" id="Test_DatetimeLocal">
+</h3>
+      </h3>
+
+  <h3> Suggested Activities
+
+  </h3>
+  
+       <h3> Trending around you 
+
+      </h3>
 
 <script src="./assets/js/script.js"></script>
 </body>
