--- a/index.html
+++ b/index.html
@@ -3,12 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://momentjs.com/downloads/moment.js">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TravelNiche</title>
 </head>
 <body>
 
-<script src="./assets/js/script.js"></script>
+  <header></header>
+
+  <img src="./assets/images/mountain-banner.jpeg" alt="Mountain-Banner">
+
+  <section id="main-container">
+    <h5>TravelNiche - Vacation Planner</h5>
+    <input id="search" type="search" placeholder="Search" aria-label="Search">
+    <input id="date-picker" type="text" name="daterange" value=""/>
+    <button class="button" type="submit">Plan your trip</button>
+  </section>
+
+
+
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXOpq2m5V0uDBCNRZdA6pHIyW-21ToMYM&libraries=places&callback=activatePlacesSearch">
+  </script>
+
+
+  <footer></footer>
+
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
