--- a/nextPage.html
+++ b/nextPage.html
@@ -12,26 +12,9 @@
 
 <body>
 
-  <header>
-    
-  </header>
+  <header></header>
 
-  <img src="./assets/images/mountain-banner.jpeg" alt="Mountain-Banner">
-
-  <section id="main-container">
-    <h5>TravelNiche - Vacation Planner</h5>
-    <input id="search" type="search" placeholder="Search" aria-label="Search">
-    <input id="date-picker" type="text" name="daterange" value=""/>
-    <button class="button" type="submit">Plan your trip</button>
-  </section>
-
-
-
-  <!-- <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXOpq2m5V0uDBCNRZdA6pHIyW-21ToMYM&libraries=places&callback=activatePlacesSearch">
-  </script> -->
-
-
+  
   <footer></footer>
 
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
@@ -39,6 +22,6 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
   <script src="./assets/js/script.js"></script>
-
+  
 </body>
 </html>
