changed background image to gif

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
   </header>
 
-  <img src="./assets/images/mountain-banner.jpeg" alt="Mountain-Banner">
+  <img src="./assets/images/BEER.gif" alt="Beer" id="background">
 
   <section id="main-container">
     <h5>TravelNiche - Vacation Planner</h5>
