added autocomplete and accessed API to get business name

--- a/index.html
+++ b/index.html
@@ -16,21 +16,17 @@
     
   </header>
 
-  <img src="./assets/images/mountain-banner.jpeg" alt="Mountain-Banner">
-
   <section id="main-container">
-    <h5>TravelNiche - Vacation Planner</h5>
+    <h5>TravelNiche - Bar Locator</h5>
     <input id="search" type="search" placeholder="Search" aria-label="Search">
+    <datalist id="search-result"></datalist>
     <input id="date-picker" type="text" name="daterange" value=""/>
-    <button class="button" type="submit">Plan your trip</button>
+    <button id="find-button" class="button" type="submit">Find Bars</button>
   </section>
 
-
-
-  <!-- <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXOpq2m5V0uDBCNRZdA6pHIyW-21ToMYM&libraries=places&callback=activatePlacesSearch">
-  </script> -->
-
+  <section id="second-page">
+    
+  </section>
 
   <footer></footer>
 
