--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TravelNiche</title>
+  <style>
+    body{
+      background-image: url('./assets/images/BEER.gif');
+    }
+  </style>
 </head>
 
 <body>
@@ -18,7 +23,7 @@
 
   </header>
   
-  <img src="./assets/images/BEER.gif" alt="Beer" id="background">
+  <!-- <img src="./assets/images/BEER.gif" alt="Beer" id="background"> -->
 
   <section id="main-container">
     <h5>TravelNiche - Bar Locator</h5>
