--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   </header>
   
-  <!-- <img src="./assets/images/BEER.gif" alt="Beer" id="background"> -->
+  <img src="./assets/images/BEER.gif" alt="Beer" id="background">
 
   <section id="main-container">
     <h5>TravelNiche - Bar Locator</h5>
@@ -31,6 +31,14 @@
     <datalist id="search-result"></datalist>
     <input id="date-picker" type="text" name="daterange" value="" />
     <button id="find-button" class="button" type="submit">Find Bars</button>
+    <!-- <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+      <div id="myDropdown" class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div> -->
   </section>
 
   <section id="second-page">
