left a second pictured commented as a markup, and styled a mark up for the cards

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </section>
 
   <section id="second-page">
-
+    <!--<img src="./assets/images/RT BAr.jpeg" alt="bar" id="sbackground">-->
   </section>
 
   <footer></footer>
