Small changes to the first page css file

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <section id="main-container">
     <h5>TravelNiche - Bar Locator</h5>
-    <input id="search" type="search" placeholder="Search" aria-label="Search">
+    <input id="search" type="search" placeholder="Search for a location to find the bars we choose for you!" aria-label="Search">
     <datalist id="search-result"></datalist>
-    <input id="date-picker" type="text" name="daterange" value="" />
+    <!-- <input id="date-picker" type="text" name="daterange" value="" /> -->
     <button id="find-button" class="button" type="submit">Find Bars</button>
   </section>
 
