--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="https://momentjs.com/downloads/moment.js">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TravelNiche</title>
@@ -23,31 +25,30 @@
   <div id="background-container">
 
   <section id="main-container">
-    <h5>TravelNiche - Bar Locator</h5>
+    <h5 id="title">TravelNiche - Bar Locator</h5>
     <input id="search" type="search" placeholder="Search for a location to find the bars we choose for you!" aria-label="Search">
     <datalist id="search-result"></datalist>
     <!-- <input id="date-picker" type="text" name="daterange" value="" /> -->
-    <button id="find-button" class="button" type="submit">Find Bars</button>
-  <!--Attached html for dropdown-->
-  <div id="list1" class="dropdown-check-list" tabindex="100">
-    <span class="anchor">More Options</span>
-    <ul class="items">
-      <li><input type="checkbox" /> Open Now </li>
-      <li><input type="checkbox" />Roof top</li>
-      <li><input type="checkbox" />Wheelchair Accesible</li>
-      <li><input type="checkbox" />Happy Hour</li>
-      <li><input type="checkbox" />Best Cocktails</li>
-      <li><input type="checkbox" /> Best Rated</li>
-      <li><input type="checkbox" />Open late</li>
-    </ul>
-  </div>
-  <script src="./assets/js/script.js"></script>
-<!--End of attachment-->
+    <button id="find-button" class="button js-modal-trigger" type="submit" data-target="modal-js-example">Find Bars!</button>
+
+    <!-- Modal -->
+    <div id="modal-js-example" class="modal">
+      <div class="modal-background"></div>
+    
+      <div class="modal-content">
+        <div class="box">
+          <p>Location input is missing, can't search for a bar. Try again.</p></div>
+      </div>
+      <button class="modal-close is-large" aria-label="close"></button>
+    </div>
+    
 
   </section>
 
   <section id="second-page">
     <button type="button" id="back-button" class="button hide">Go Back</button>
+    <div id="checklist-container"></div>
+    <div id="card-container"></div>
   </section>
 
 
@@ -55,12 +56,14 @@
 
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>  <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-  <script src="./assets/js/script.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+<script src="./assets/js/script.js"></script>
 
 </body>
 
