fixed the fixes, launch and secondary work properly now.

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 
 <body>
 
-  <!-- <header>
-  <style>
+  <!-- <style>
   body {
-      /* background-image: url('./assets/images/BEER.gif'); */
+      background-image: url('./assets/images/BEER.gif');
       background-repeat: no-repeat;
     }
   </style> -->
+  <header>
 
-  <!-- </header> -->
+  </header>
 
   <!-- Background GIF for the First Page -->
+  <img src="./assets/images/BEER.gif" alt="Beer" id="background-beer">
   
   <div id="background-container">
-    <img src="./assets/images/BEER.gif" alt="Beer" id="background-beer">
     <!-- Main Container -->
     <section id="main-container">
       <h1 id="title">TravelNiche - Bar Locator</h1>
