Added mobile compatibility
God I hope this works

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <section id="city-list"></section>
 
     <!-- Second Page -->
-    <section id="second-page">
+    <section id="second-page" class="container">
       <button type="button" id="back-button" class="button hide">Go Back</button>
       <div id="checklist-container"></div>
-      <div id="card-container"></div>
+      <div id="card-container" class="row justify-content-center"></div>
     </section>
 
     <!-- Footer -->
