Added media queries and fixed view issue on larger screens

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <h1 id="title">TravelNiche - Bar Locator</h1>
       <input id="search" type="search" placeholder="Search for a location to find the bars we choose for you!"
         aria-label="Search">
+      <div>
       <datalist id="search-result"></datalist>
+      </div>
       <!-- <input id="date-picker" type="text" name="daterange" value="" /> -->
       <button id="find-button" class="button js-modal-trigger" type="submit" data-target="modal-js-example">Find
         Bars!</button>
